# k4geo

./: .gitignore  CMakeLists.txt  edm4dr.yaml
FCCee/IDEA/compact/IDEA_o1_v03/: Solenoid_o1_v01.xml
FCCee/IDEA/compact/IDEA_o2_v01/: DectDimensions_IDEA_o2_v01.xml  IDEA_o2_v01.xml  SCEPCal.xml
SiD/compact/SiD_o2_v02/: BeamPipe.xml  SiD_o2_v02.xml  SiTrackerBarrel_o2_v02_00.xml  SiTrackerEndcap_o2_v02_01.xml  SiVertexBarrel.xml  SiVertexEndcap_o2_v02.xml  Support.xml  scan.mac
SiD/compact/sidloi3/: sidloi3_v00.xml
detector/calorimeter/: SCEPCalConstructor.cpp
edm4dr/: CMakeLists.txt
example/: SteeringFile_IDEA_o2_v01.py  SteeringFile_IDEA_o2_v01_fullopt.py  scepcal_steering.py
plugins/: Geant4Output2EDM4hep_DRC.cpp
